Set#of instead of ImmutableSet#of